# mpi-bruck-reduce

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  LICENSE  Readme.md  convert_to_csv.py  mtype_plot.py  results.csv  runtime.py  weakscaling.py
.github/workflows/: ci.yml
results/: 10x10_4963900.out  10x1_4963900.out  10x32_4963900.out  1x10_4963903.out  1x1_4963903.out  1x32_4963903.out  20x10_4963899.out  20x1_4963899.out  20x32_4963899.out
sources/: CMakeLists.txt  algorithm0.cpp  algorithm1.cpp  algorithm2.cpp  algorithms.h  baseline.cpp  baseline_old.cpp  hydra  job-run.sh  main.cpp  merge.cpp
